# claim-automation-cloud

./: .gitignore  CLAUDE.md  Makefile
.claude/: settings.json
.claude/hooks/: spec-edit-reminder.py
.github/workflows/: ci.yml  deploy-functions.yml  deploy-swa.yml
.specs/: azure-implementation.md  steering-audit.md
.specs/auth/: spec.md
.specs/deployment/: spec.md
.specs/steering/: constitution.md  product.md  structure.md  tech.md
.specs/walking-skeleton/: spec.md
backend/: .env.example  .funcignore  README.md  function_app.py  pyproject.toml
backend/app/: auth_routes.py  config.py  main.py  secret_store.py  security.py  state_store.py
backend/pipeline/: __init__.py
backend/tests/: conftest.py
backend/tests/integration/: test_state_store.py
backend/tests/unit/: test_auth_routes.py  test_config_tables.py  test_function_app.py  test_function_host.py  test_health.py  test_secret_store.py  test_secret_store_keyvault.py  test_security.py
e2e/: package-lock.json  package.json  playwright.config.ts  seed-secrets.mjs  stub-idp.mjs
e2e/tests/: auth.spec.ts  health.spec.ts
frontend/: README.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  Login.test.tsx  Login.tsx  api.test.ts  api.ts  auth.test.ts  auth.ts  main.tsx  setupTests.ts  vite-env.d.ts
