[project]
name = "claim-automation-backend"
version = "0.1.0"
description = "Claim Automation (Cloud) backend — FastAPI on Azure Functions"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.34",
    "azure-functions>=1.21",
    "pydantic-settings>=2.14.2",
    "pyjwt>=2.13.0",
    "httpx>=0.28",
    "azure-identity>=1.19",
    "azure-keyvault-secrets>=4.9",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.9",
    "respx>=0.23.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"
